move login links to nav + z-index fix

--- a/app/actionifythenews/actionify/static/styles.css
+++ b/app/actionifythenews/actionify/static/styles.css
@@ -94,6 +94,7 @@ header {
 	animation: 1s fadein 0.5s forwards;
 	opacity: 0;
 	color: #fff;
+	z-index: 1;
 }
 
 @keyframes fadein {
@@ -115,6 +116,7 @@ header nav li {
 	header {
 		padding: 20px 50px;
 		flex-direction: column;
+		z-index: 1;
 	}
 
 	header h2 {
